fixed overflow footer menu

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -4,11 +4,11 @@
   background-color: $color-tangaroa;
 
   @include vp-1023 {
-    padding: 45px 0;
+    padding: 48px 0;
   }
 
   @include vp-374 {
-    padding: 40px 15px;
+    padding: 38px 15px;
   }
 }
 
@@ -57,6 +57,7 @@
   padding-inline-start: 0;
   margin-block-start: 0;
   margin-block-end: 0;
+  margin-top: 6px;
 
   @include vp-1023 {
     margin-top: -4px;
@@ -95,8 +96,10 @@
 }
 
 .footer__social {
+  width: auto;
+  max-width: 136px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
   column-gap: 7px;
